--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   ],
   "scripts": {
     "start": "npx parcel example/index.html",
-    "build": "npx parcel build src/index.tsx -d lib",
+    "build": "npx parcel build src/index.tsx -d lib --detailed-report",
     "prepublish": "npm run build"
   },
   "dependencies": {
