--- a/package.json
+++ b/package.json
@@ -16,18 +16,14 @@
     "prepublish": "npm run build"
   },
   "dependencies": {
-    "antd": "^3.12.1",
-    "echarts": "^4.2.0-rc.2",
     "react": "^16.2.0",
-    "react-dom": "^16.2.0",
-    "react-draggable-tags": "^0.2.9"
+    "react-dom": "^16.2.0"
   },
   "devDependencies": {
     "sass": "^1.15.2",
     "autoprefixer": "^9.4.3",
     "postcss-modules": "^1.4.1",
     "@types/react-dom": "^16.0.3",
-    "@types/echarts": "^4.1.3",
     "@types/lodash-es": "^4.17.1",
     "@types/node": "^10.12.18",
     "@types/react": "^16.7.18",
